# feishin-rpc

./: LICENSE.txt  README.md  efficient-rpc.py  feishin-rpc.py  pyproject.toml  requirements.txt  something.py
feishin_rpc/: __init__.py  __main__.py  config.py  configuration.py  discord.py  images.py
