[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["feishin_rpc"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "feishin-rpc"
version = "1.0.0"
dependencies = [
  "requests",
  "pypresence @ git+https://github.com/iiarchives/pypresence",
  "rel",
  "websocket-client[optional]",
]

[project.scripts]
feishin-rpc = "feishin_rpc.__main__:main"
feishin-rpc-config = "feishin_rpc.configuration:launch"
